@@ -3294,20 +3294,20 @@ enum BanReturn
 // indexes of BattlemasterList.dbc
 enum BattlegroundTypeId
 {
-    BATTLEGROUND_TYPE_NONE     = 0,
-    BATTLEGROUND_AV            = 1,
-    BATTLEGROUND_WS            = 2,
-    BATTLEGROUND_AB            = 3,
-    BATTLEGROUND_NA            = 4,
-    BATTLEGROUND_BE            = 5,
-    BATTLEGROUND_AA            = 6,
-    BATTLEGROUND_EY            = 7,
-    BATTLEGROUND_RL            = 8,
-    BATTLEGROUND_SA            = 9,
-    BATTLEGROUND_DS            = 10,
-    BATTLEGROUND_RV            = 11,
-    BATTLEGROUND_IC            = 30,
-    BATTLEGROUND_RB            = 32
+    BATTLEGROUND_TYPE_NONE     = 0, // None
+    BATTLEGROUND_AV            = 1, // Alterac Valley
+    BATTLEGROUND_WS            = 2, // Warsong Gulch
+    BATTLEGROUND_AB            = 3, // Arathi Basin
+    BATTLEGROUND_NA            = 4, // Nagrand Arena
+    BATTLEGROUND_BE            = 5, // Blade's Edge Arena
+    BATTLEGROUND_AA            = 6, // All Arenas
+    BATTLEGROUND_EY            = 7, // Eye of the Storm
+    BATTLEGROUND_RL            = 8, // Ruins of Lordaernon
+    BATTLEGROUND_SA            = 9, // Strand of the Ancients
+    BATTLEGROUND_DS            = 10, // Dalaran Sewers
+    BATTLEGROUND_RV            = 11, // Ring of Valor
+    BATTLEGROUND_IC            = 30, // Isle of Conquest
+    BATTLEGROUND_RB            = 32 // Random Battleground
 };
 
 #define MAX_BATTLEGROUND_TYPE_ID 33
